@@ -722,6 +722,7 @@ receive_battery_status_update (void)
   GTimer *timer = NULL;
   gint32 b_level = -1;
   battery_info *b_info = NULL;
+  gboolean checked_charging = FALSE;
 
   dbus_error_init(&err);
   conn = dbus_bus_get(DBUS_BUS_SYSTEM, &err);
@@ -734,8 +735,8 @@ receive_battery_status_update (void)
 
   /* Init battery info struct */
   b_info = new battery_info ();
-  b_info->level = -1;
-  b_info->charging = -1;
+  b_info->level = 0;
+  b_info->charging = FALSE;
 
   /* Init timer */
   timer = g_timer_new ();
@@ -743,7 +744,7 @@ receive_battery_status_update (void)
   /* Check for interesting signals */
   g_timer_start (timer);
   while ((g_timer_elapsed (timer, NULL) < BATTERY_REQUEST_TIMEOUT) &&
-    (b_info->level == -1 || b_info->charging == -1))
+    (b_info->level == -1 || !checked_charging))
     {
       dbus_connection_read_write(conn, 0);
       msg = dbus_connection_pop_message(conn);
@@ -773,11 +774,13 @@ receive_battery_status_update (void)
 	       dbus_message_is_signal(msg, BME_SIGNAL_IF, BME_CHARGER_CHARGING_ON))
 	{
 	  b_info->charging = TRUE;
+	  checked_charging = TRUE;
 	}
       else if (dbus_message_is_signal(msg, BME_SIGNAL_IF, BME_CHARGER_DISCONNECTED) ||
 	       dbus_message_is_signal(msg, BME_SIGNAL_IF, BME_CHARGER_CHARGING_OFF))
 	{
 	  b_info->charging = FALSE;
+	  checked_charging = TRUE;
 	}
     }
 
