@@ -1,4 +1,15 @@
-2008-01-17  Mario Sanchez Prada  <msanchez@maemo.org>
+2008-01-21  Mario Sanchez Prada  <msanchez@maemo.org>
+
+	* src/operations.cc (enough_battery_to_update): Improved the code
+	to check the battery status. Fixed a memory leak (N79022).
+
+	* src/dbus.h (struct battery_info): Changed the 'chargin' field to
+	have a gboolean datatype, instead of gint (N79022).
+
+	* src/dbus.cc (receive_battery_status_update): Some needed changes
+	due to the datatype modification commented above (N79022).
+
+2008-01-18  Mario Sanchez Prada  <msanchez@maemo.org>
 
 	* src/update-notifier.c (update_notifier_init): Connect a callback
 	for managing display events (N79304).
